[package]
name = "ingert"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
gospel = "0.3.1"
snafu = "0.8.5"
tracing = { version = "0.1.40", features = ["attributes"] }
crc32fast = "1.4.2"
strum = { version = "0.26", features = ["derive"] }
compact-debug = "0.1.3"
similar-asserts = "1.6.0"
indexmap = "2.8.0"
unicode-ident = "1.0.18"

[profile.dev.package."*"]
opt-level = 3
