[package]
name = "ingert-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ingert.path = "../ingert"
ingert-syntax.path = "../ingert-syntax"
clap = { version = "4.5.20", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing = { version = "0.1.40", features = ["attributes"] }
compact-debug = "0.1.3"
similar-asserts = "1.6.0"
codespan-reporting = "0.12.0"
